# cathook

./: .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO  attach  attach-backtrace  attach-backtrace-scramble.sh  attach-gdb  attach-libnamed.sh  attach-pid  build-css  build-debug-css  build-debug-tf2  build-hl2dm  build-tf2  build-tf2c  build_names  check-data  classdump-tf2.txt  config  detach  format.sh  full-class-table.json  generate-class-headers.js  generate-dummy-header.js  generate-dynamic-header.js  install-all  install-all.sh  install-data  install-resources.sh  make-nogui.sh  makefile  preload  (+9 more)
include/: CDumper.hpp  CMakeLists.txt  Constants.hpp  EffectChams.hpp  MiscTemporary.hpp  Options.hpp  PlayerTools.hpp  WeaponData.hpp  aftercheaders.hpp  angles.hpp  averager.hpp  backpacktf.hpp  base64.hpp  bytepatch.hpp  catsmclient.h  chatlog.hpp  chatstack.hpp  common.hpp  conditions.hpp  config.h.in  crits.hpp  cvwrapper.hpp  drawgl.hpp  drawing.hpp  drawmgr.hpp  e8call.hpp  entitycache.hpp  entityhitboxcache.hpp  enums.hpp  fidgetspinner.hpp  fixsdk.hpp  gameinfo.hpp  globals.h  hack.hpp  helpers.hpp  hitrate.hpp  hooks.hpp  hoovy.hpp  https_request.hpp  init.hpp  (+37 more)
include/TF2_NavFile_Reader/: CNavFile.h  astar.h  nav.h
include/classinfo/: CMakeLists.txt  classinfo.hpp  css.gen.hpp  css_constexpr.gen.hpp  dab.gen.hpp  dab_constexpr.gen.hpp  dummy.gen.hpp  dynamic.gen.hpp  hl2dm.gen.hpp  hl2dm_constexpr.gen.hpp  tf2.gen.hpp  tf2_constexpr.gen.hpp  tf2c.gen.hpp  tf2c_constexpr.gen.hpp
include/copypasted/: CDumper.hpp  CMakeLists.txt  CSignature.h  Netvar.h
include/core/: CMakeLists.txt  cvwrapper.hpp  e8call.hpp  interfaces.hpp  logging.hpp  macros.hpp  netvars.hpp  offsets.hpp  profiler.hpp  sdk.hpp  sharedobj.hpp  vfunc.hpp
include/gui/: GUI.hpp
include/hacks/: Achievement.hpp  Aimbot.hpp  Announcer.hpp  AntiAim.hpp  AntiAntiAim.hpp  AntiBackstab.hpp  AntiCheat.hpp  AntiDisguise.hpp  AutoBackstab.hpp  AutoDeadringer.hpp  AutoDetonator.hpp  AutoHeal.hpp  AutoJoin.hpp  AutoParty.hpp  AutoReflect.hpp  AutoSticky.hpp  AutoTaunt.hpp  Backtrack.hpp  Bunnyhop.hpp  CMakeLists.txt  CatBot.hpp  DominateSay.hpp  ESP.hpp  Events.hpp  FollowBot.hpp  HealArrows.hpp  KillSay.hpp  Killstreak.hpp  LagExploit.hpp  LightESP.hpp  Misc.hpp  MiscAimbot.hpp  NavBot.hpp  Noisemaker.hpp  Radar.hpp  SeedPrediction.hpp  SkinChanger.hpp  Spam.hpp  SpyAlert.hpp  SteamIDStealer.hpp  (+6 more)
include/hooks/: CMakeLists.txt  CreateMove.hpp  GetFriendPersonaName.hpp  HookTools.hpp  HookedMethods.hpp  PaintTraverse.hpp  PreDataUpdate.hpp  hookedmethods.hpp  others.hpp
include/menu/: CBaseButton.h  CBaseContainer.h  CBaseWidget.h  CBaseWindow.h  CCTitleBar.h  CCVarContainer.h  CCheckbox.h  CDropdown.h  CDropdownEntry.h  CDropdownList.h  CKeyInput.h  CMenuContainer.h  CMenuList.h  CMenuListEntry.h  CMenuWindow.h  CSlider.h  CSplitContainer.h  CTextInput.h  CTextLabel.h  CTooltip.h  GUI.h  IWidget.h  RootWindow.h  compatlayer.hpp  guicommon.h
include/online/: CMakeLists.txt  Online.hpp
include/reclasses/: CMakeLists.txt  CTFGCClientSystem.hpp  CTFInventoryManager.hpp  CTFParty.hpp  CTFPartyClient.hpp  CTFPlayerShared.hpp  C_BaseCombatWeapon.hpp  C_BaseEntity.hpp  C_BasePlayer.hpp  C_MannVsMachineStats.hpp  C_TEFireBullets.hpp  C_TFWeaponBase.hpp  C_TFWeaponBaseGun.hpp  C_TFWeaponBaseMelee.hpp  ITFGroupMatchCriteria.hpp  reclasses.hpp
include/sdk/: CGameRules.h  CMakeLists.txt  HUD.h  ScreenSpaceEffects.h  TFGCClientSystem.hpp  c_basetempentity.h  dt_recv_redef.h  igamemovement.h  iinput.h  imaterialsystemfixed.h  in_buttons.h  netmessage.hpp  usercmd.hpp
include/settings/: Bool.hpp  CMakeLists.txt  Float.hpp  Int.hpp  Key.hpp  Manager.hpp  Registered.hpp  Rgba.hpp  SettingCommands.hpp  Settings.hpp  SettingsIO.hpp  String.hpp
include/visual/: CMakeLists.txt  EffectChams.hpp  EffectGlow.hpp  EventLogging.hpp  SDLHooks.hpp  atlas.hpp  colors.hpp  drawex.hpp  drawgl.hpp  drawing.hpp  drawmgr.hpp  fidgetspinner.hpp  ftrender.hpp  glez.h  xoverlay.h
src/: CMakeLists.txt  CaptureLogic.cpp  EffectChams.cpp  EffectChams.hpp  EffectGlow.cpp  EffectGlow.hpp  EventLogging.cpp  IRC.cpp  MiscTemporary.cpp  Options.cpp  PlayerTools.cpp  SetupBonesReconst.cpp  angles.cpp  atlas.cpp  atlas.hpp  backpacktf.cpp  backpacktf.hpp  catpackets.h  catpclient.c  catpclient.h  catsmclient.c  chatlog.cpp  chatstack.cpp  chatstack.h  colors.cpp  common.h  conditions.cpp  conditions.h  controlpointcontroller.cpp  crits.cpp  crits.h  cvwrapper.cpp  cvwrapper.h  drawex.cpp  drawex.hpp  drawgl.cpp  drawgl.hpp  drawing.cpp  drawing.h  drawmgr.cpp  (+83 more)
src/classinfo/: CMakeLists.txt  classinfo.cpp  classinfo.hpp  css.gen.hpp  css_constexpr.gen.hpp  dummy.gen.hpp  dump.cpp  dynamic.gen.cpp  dynamic.gen.hpp  hl2dm.gen.hpp  hl2dm_constexpr.gen.hpp  tf2.gen.hpp  tf2_constexpr.gen.hpp  tf2c.gen.hpp  tf2c_constexpr.gen.hpp
src/copypasted/: CMakeLists.txt  CSignature.cpp  Netvar.cpp
src/core/: CMakeLists.txt  cvwrapper.cpp  entry.cpp  init.cpp  interfaces.cpp  logging.cpp  netvars.cpp  overwrite_dlopen.cpp  profiler.cpp  sharedobj.cpp
src/gui/: CBaseButton.cpp  CBaseContainer.cpp  CBaseContainer.h  CBaseWidget.cpp  CBaseWidget.h  CBaseWindow.cpp  CCTitleBar.cpp  CCVarContainer.cpp  CCheckbox.cpp  CDropdown.cpp  CDropdownEntry.cpp  CDropdownList.cpp  CKeyInput.cpp  CMenuContainer.cpp  CMenuListEntry.cpp  CMenuWindow.cpp  CSlider.cpp  CTextInput.cpp  CTextLabel.cpp  CTooltip.cpp  GUI.cpp  GUI.h  IWidget.h  RootWindow.cpp  guicommon.h
src/hacks/: Achievement.cpp  Achievement.h  AimSandwich.cpp  Aimbot.cpp  Aimbot.h  Airstuck.cpp  Airstuck.h  Announcer.cpp  AntiAim.cpp  AntiAntiAim.cpp  AntiBackstab.cpp  AntiCheat.cpp  AntiCheatBypass.cpp  AntiDisguise.cpp  AntiDisguise.h  AutoBackstab.cpp  AutoDeadringer.cpp  AutoDetonator.cpp  AutoEquip.cpp  AutoHeal.cpp  AutoHeal.h  AutoItem.cpp  AutoJoin.cpp  AutoParty.cpp  AutoReflect.cpp  AutoReflect.h  AutoSticky.cpp  AutoSticky.h  AutoTaunt.cpp  AutoViewmodel.cpp  BPExpander.cpp  Backtrack.cpp  (+61 more)
(+457 files in other folders)
